add info about myself

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     <header>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
+
+      <a href="/"><img src="img/me.jpg"></a>
+      <p>
+        Гладышева Елизавета Александровна<br>
+        <span>Email: <a href="e.a.gladysheva303@gmail.com">e.a.gladysheva303@gmail.com</a></span><br>
+        <span>Phone: <a href="80297659267">+375-29-7659267</a></span>
+      </p>
     </header>
 
     <div class="container">
